commit change name

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
 ---
 type: page
-title: VuDepTrai
+title: VuDepTrai version1
 date: 2021-03-19
 ---
 
@@ -20,6 +20,6 @@ This portfolio is built with **Next.js** and a library called [Nextra](https://n
   GitHub [@yourname](https://github.com/yourname)
   <br />
   Instagram [@yourname](https://instagram.com/yourname)
-  <br />
+  <br />  
   Email your@name.com
 </div>
